--- a/src/components/DasboardCards/DashBlogCard/DashBlogCard.css
+++ b/src/components/DasboardCards/DashBlogCard/DashBlogCard.css
@@ -20,13 +20,15 @@
 }
 
 .d-b-card-lower .title {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 600;
   line-height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .d-b-card-lower .description {
@@ -55,25 +57,7 @@
 .dash-blog-card .author .name {
   font-size: 14px;
   font-weight: 500;
-  line-height: 140%;
-}
-
-.dash-blog-card .author .department {
-  font-size: 12px;
-  width: 60%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  line-height: 100%;
-}
-
-.dash-blog-card .author .batch {
-  font-size: 12px;
   text-align: right;
-  width: 40%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
   line-height: 100%;
 }
 
@@ -135,17 +119,17 @@
   margin-right: 2px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1400px) {
   .d-b-card-lower .title {
     font-size: 16px !important;
   }
 
-  .d-b-card-lower .author {
+  .d-b-card-lower .author div {
     font-size: 14px !important;
   }
 
   .dash-lg-carousel .d-b-card-lower .description {
-    margin-top: 0;
+    margin-top: 15px;
   }
 
   .dash-lg-carousel .d-b-card-lower {
