--- a/src/components/Messages/Message.css
+++ b/src/components/Messages/Message.css
@@ -19,10 +19,12 @@
 }
 
 .msg-sender {
-  background-color: rgb(148, 20, 148);
   color: white;
-  width: 80px;
+  /* text-shadow: 0 0 4px rgba(0, 0, 0, 0.722);
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.589); */
+  background-color: purple;
   font-weight: 500;
+  height: 50px;
   font-size: 20px;
   display: flex;
   align-items: center;
