--- a/src/pages/Private/Chats/Chats.css
+++ b/src/pages/Private/Chats/Chats.css
@@ -5,6 +5,9 @@
 .chats-left {
   background-color: rgb(172, 172, 172);
   width: 30%;
+  display: flex;
+  flex-direction: row;
+  padding: 5%;
 }
 
 .chats-right {
@@ -62,4 +65,16 @@
   padding: 8px 20px;
   color: white;
   font-size: 18px;
+  cursor: pointer;
+}
+
+.no-conversation-text {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  font-weight: 500;
+  color: rgb(144, 144, 144);
 }
