--- a/src/pages/Private/Profiles/ProfilesView.css
+++ b/src/pages/Private/Profiles/ProfilesView.css
@@ -28,7 +28,7 @@
 
 .profiles-view-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-row-gap: 20px;
   gap: 40px;
 }
@@ -38,10 +38,11 @@
   border: 2px solid rgba(58, 90, 64, 1);
   background-color: white;
   border-radius: 6px;
+  max-width: 100%;
 }
 
 .search-cnt input {
-  width: 400px;
+  max-width: calc(100% - 50px);
   border: none !important;
   border-radius: 6px 0 0 6px;
   outline: none;
@@ -61,12 +62,10 @@
   height: 42px;
 }
 
-.filter-inner .department:first-child {
-	width: 340px;
-}
-
-.filter-inner .department:nth-child(2) {
-	width: 550px;
+.filter-inner .department {
+  max-width: 400px;
+  width: 50%;
+  min-width: 250px;
 }
 
 .filter-dept__control,
@@ -98,7 +97,7 @@
 }
 
 /* Firefox */
-.filter-inner .grad[type=number] {
+.filter-inner .grad[type="number"] {
   -moz-appearance: textfield;
 }
 
@@ -115,10 +114,21 @@
   padding: 0 20px;
   cursor: pointer;
   height: 40px;
+  white-space: nowrap;
 }
 
 .grad-year-label {
   font-size: 16px;
   font-weight: 500;
   margin-right: 10px;
+}
+
+@media (max-width: 768px) {
+  .apply-filter {
+    border-radius: 8px;
+    font-size: 14px;
+    padding: 5px 15px;
+    height: unset;
+    margin-bottom: 20px;
+  }
 }
