--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,16 @@
   font-family: "Outfit", sans-serif;
 }
 
+a {
+  text-decoration: none!important;
+}
+
 input {
   outline: none;
 }
 
 .App,
 .App > div {
-  width: 100vw;
+  width: 100%;
   overflow-y: hidden;
 }
