--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,43 +1,42 @@
-.navbar-main {
+.navbar {
   background-color: rgba(58, 90, 64, 1);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   height: 70px;
-  user-select: none;
-  position: fixed;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  z-index: 10000;
-  box-shadow: 0px 0px 15px 6px rgba(58, 90, 64, 0.5);
 }
 
-a {
-  text-decoration: none !important;
-}
-
-.nav-logo {
+.navbar-brand.logo {
   color: white !important;
-  margin-left: 40px;
   font-size: 30px;
   font-weight: 600;
   cursor: pointer;
   text-transform: uppercase;
 }
 
-.navbar-links {
-  width: max-content;
-  margin-right: 30px;
+.navbar-nav .nav-link {
+  color: white !important;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 40px;
+  margin-left: 40px;
 }
 
-.nav-link,
+.navbar a {
+  text-decoration: none !important;
+}
+
+.navbar .navbar-toggler {
+  border: none;
+  filter: invert(99%) sepia(100%) saturate(0%) hue-rotate(97deg)
+    brightness(111%) contrast(100%);
+  outline: none !important;
+  box-shadow: none !important;
+}
+
 .navbar-btn {
   color: white !important;
   font-size: 20px;
   font-weight: 500;
   line-height: 40px;
-  margin: 15px 15px;
+  margin: 0px 15px;
 }
 
 .navbar-btn {
@@ -59,6 +58,7 @@ a {
   background-color: rgba(88, 129, 87, 1);
   cursor: pointer;
   position: relative;
+  width: fit-content;
 }
 
 .profile-btn img {
@@ -73,7 +73,7 @@ a {
   display: none;
   position: absolute;
   background-color: rgba(58, 90, 64, 1);
-  top: 64px;
+  top: 62px;
   left: 0px;
   width: fit-content;
   font-weight: 400;
@@ -92,7 +92,7 @@ a {
 }
 
 .prof-btn-overlay .prof-btn-link {
-  padding: 0px 14px;
+  padding: 10px 18px;
   margin: 5px 0;
   color: white;
   text-decoration: none;
@@ -111,206 +111,52 @@ a {
   background-color: rgba(88, 129, 87, 1);
 }
 
-.dropdown {
-  height: 100%;
-  padding: 20px 25px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  position: relative;
-  font-size: 20px;
-  font-weight: 500;
-  perspective: 1000px;
-  z-index: 100;
-}
-.dropdown:hover {
-  cursor: pointer;
-}
-.dropdown:hover .dropdown_menu li {
-  display: block;
+.dropdown-menu {
+  margin-top: 6px !important;
+  margin-left: 30px!important;
+  background-color: rgba(58, 90, 64, 1) !important;
+  border: none !important;
 }
 
-.dropdown_menu {
-  position: absolute;
-  top: 100%;
-  left: -20%;
-  width: 120%;
-  perspective: 1000px;
-  z-index: -1;
-}
-
-.dropdown_menu li {
-  display: none;
+.dropdown-menu .dropdown-item {
   color: white;
-  background-color: rgba(58, 90, 64, 1);
-  padding: 10px 20px;
   font-size: 18px;
   font-weight: 500;
-  opacity: 0;
+  padding: 6px 30px;
 }
 
-.dropdown_menu li:hover {
+.dropdown-menu .dropdown-item:hover {
   background-color: rgba(88, 129, 87, 1);
+  color: white;
 }
 
-.dropdown_menu .dropdown_item-1 {
-  transform-origin: top center;
-  animation: rotateX 300ms 50ms ease-in-out forwards;
-}
-.dropdown_menu .dropdown_item-2 {
-  transform-origin: top center;
-  animation: rotateX 300ms 100ms ease-in-out forwards;
-}
+@media (max-width: 992px) {
+  .navbar-nav .nav-link,
+  .dropdown-toggle.nav-link {
+    text-align: center;
+    margin-left: 0px;
+    margin: auto;
+    width: fit-content;
+  }
 
-.navbar-mobile {
-  display: none;
-}
+  .profile-btn {
+    margin: auto;
+  }
 
-.hamburger div {
-  width: 30px;
-  height: 3px;
-  background: #f2f5f7;
-  margin: 5px;
-}
+  .dropdown-menu {
+    margin-top: 0 !important;
+    text-align: center !important;
+    padding: 0 !important;
+  }
 
-@-moz-keyframes rotateX {
-  0% {
-    opacity: 0;
-    transform: rotateX(-90deg);
-  }
-  50% {
-    transform: rotateX(-20deg);
-  }
-  100% {
-    opacity: 1;
-    transform: rotateX(0deg);
-  }
-}
-@-webkit-keyframes rotateX {
-  0% {
-    opacity: 0;
-    transform: rotateX(-90deg);
-  }
-  50% {
-    transform: rotateX(-20deg);
-  }
-  100% {
-    opacity: 1;
-    transform: rotateX(0deg);
-  }
-}
-@-o-keyframes rotateX {
-  0% {
-    opacity: 0;
-    transform: rotateX(-90deg);
-  }
-  50% {
-    transform: rotateX(-20deg);
-  }
-  100% {
-    opacity: 1;
-    transform: rotateX(0deg);
-  }
-}
-@keyframes rotateX {
-  0% {
-    opacity: 0;
-    transform: rotateX(-90deg);
-  }
-  50% {
-    transform: rotateX(-20deg);
-  }
-  100% {
-    opacity: 1;
-    transform: rotateX(0deg);
+  .dropdown-menu a {
+    font-size: 20px !important;
+    color: rgb(190, 187, 187) !important;
   }
 }
 
 @keyframes pulse {
   50% {
     transform: scale(0.98);
-  }
-}
-
-@media (max-width: 1300px) and (min-width: 1100px) {
-  .navbar-main .nav-link {
-    padding: 0 10px;
-  }
-}
-
-@media (max-width: 1100px) {
-  .navbar-main {
-    align-items: flex-start;
-    justify-content: space-between;
-  }
-  .nav-logo {
-    height: 100%;
-    display: flex;
-    align-items: center;
-  }
-  .navbar-desktop.navbar-links {
-    display: none !important;
-  }
-  .navbar-mobile {
-    display: block;
-  }
-  .hamburger {
-    display: block;
-    position: absolute;
-    cursor: pointer;
-    right: 5%;
-    top: 50%;
-    transform: translate(-5%, -50%);
-    z-index: 2;
-    transition: all 0.7s ease;
-  }
-  .hamburger .line1,
-  .hamburger .line3 {
-    transition: all 0.5s ease;
-  }
-  .hamburger .line2 {
-    transition: all 0.3s ease;
-  }
-  .mobile-nav-links {
-    transform: translateX(100%);
-    list-style: none;
-    background-color: rgba(58, 90, 64, 1);
-    height: calc(100vh - 70px);
-    padding: 0;
-    margin-top: 70px;
-    width: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.15);
-    transition: all 0.5s ease-in-out;
-  }
-  .mobile-nav-links.show {
-    transform: translateX(0);
-    width: fit-content;
-    transition: all 0.5s ease-in-out;
-  }
-  .mobile-nav-links li {
-    cursor: pointer;
-    padding: 15px 60px;
-    text-align: center;
-  }
-  .mobile-nav-links li a,
-  .mobile-nav-links li {
-    color: white;
-    font-size: 18px;
-  }
-  .toggle .line1 {
-    transform: rotate(-45deg) translate(-5px, 6px);
-  }
-  .toggle .line2 {
-    width: 0;
-  }
-  .toggle .line3 {
-    transform: rotate(45deg) translate(-5px, -6px);
-  }
-}
-
-@media (max-width: 330px) {
-  .mobile-nav-links.show {
-    transform: translateX(-15%);
   }
 }
