--- a/src/pages/Private/Chats/Chats.css
+++ b/src/pages/Private/Chats/Chats.css
@@ -14,12 +14,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 
 .message-top {
   height: 100%;
   overflow-y: auto;
-  padding: 20px 20px 40px 20px;
+  padding: 10px 40px 0 40px;
 }
 
 /* ===== Scrollbar CSS ===== */
@@ -82,9 +83,8 @@
 .chat-type .send-btn {
   background-color: rgb(2, 105, 2);
   padding: 8px 20px;
-  color: white;
   font-size: 18px;
-  cursor: pointer;
+  box-shadow: none;
 }
 
 .no-conversation-text {
@@ -96,4 +96,18 @@
   font-size: 30px;
   font-weight: 500;
   color: rgb(144, 144, 144);
+}
+
+.cannot-reply {
+  color: rgb(113, 113, 113);
+  font-size: 20px;
+}
+
+.blocked-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 100%;
+  width: 100%;
 }
