--- a/src/components/Messages/Message.css
+++ b/src/components/Messages/Message.css
@@ -22,7 +22,7 @@
   color: white;
   /* text-shadow: 0 0 4px rgba(0, 0, 0, 0.722);
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.589); */
-  background-color: purple;
+  background-color: rgb(118, 48, 5);
   font-weight: 500;
   height: 50px;
   font-size: 20px;
@@ -32,6 +32,10 @@
   border-radius: 50%;
   aspect-ratio: 1 / 1;
   margin-left: 10px;
+}
+
+.message-cnt-other .msg-sender {
+  background-color: purple;
 }
 
 .message-cnt-other .msg-content {
