:hammer: internship pages

--- a/src/pages/Private/Internships/Posting/InternshipPosting.css
+++ b/src/pages/Private/Internships/Posting/InternshipPosting.css
@@ -45,3 +45,8 @@
 .intro-section .sub-head {
   font-size: 18px;
 }
+
+.internship-field .animated-in, .internship-ques .animated-in{
+  max-width: unset;
+
+}
