--- a/src/components/CustomDropdown/CustomDropdown.css
+++ b/src/components/CustomDropdown/CustomDropdown.css
@@ -35,7 +35,7 @@
 
 .custom-dd .custom-dd__menu-list {
   background-color: rgba(52, 78, 65, 1);
-  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.711);
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.435)!important;
   padding: 0;
 }
 
