--- a/src/pages/Private/Internships/Application/InternshipApplication.css
+++ b/src/pages/Private/Internships/Application/InternshipApplication.css
@@ -1,10 +1,14 @@
 .main-intro {
-    min-height: calc(100vh - 70px);
-    height: fit-content;
-    color: white;
-    padding-top: 8vh;
-    user-select: none;
-    padding-bottom: 15vh;
-    user-select: none;
-    background-color: rgba(0, 12, 2, 0.89);
-  }
+  min-height: calc(100vh - 70px);
+  height: fit-content;
+  color: white;
+  padding-top: 8vh;
+  user-select: none;
+  padding-bottom: 15vh;
+  user-select: none;
+  background-color: rgba(0, 12, 2, 0.89);
+}
+
+.cover-letter .animated-in {
+  max-width: unset;
+}
