--- a/src/components/AdminDashboard/AlumniVerification/AlumniVerification.css
+++ b/src/components/AdminDashboard/AlumniVerification/AlumniVerification.css
@@ -22,6 +22,12 @@
   padding: 20px 40px;
 }
 
+.p-image {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+}
+
 .p-name {
   font-size: 30px;
   font-weight: 500;
@@ -29,8 +35,8 @@
 
 .p-card-top {
   border-bottom: 2px solid;
-  margin-bottom: 20px;
-  padding-bottom: 5px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .p-department {
