--- a/src/pages/Private/Dashboard/AdminDashboard/AdminDashboard.css
+++ b/src/pages/Private/Dashboard/AdminDashboard/AdminDashboard.css
@@ -1,7 +1,7 @@
 .admin-dash {
   background-color: rgba(52, 78, 65, 1);
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100vh;
+  width: 100vw;
   padding: 2%;
   position: relative;
 }
